Fixed so its possible to run replacement multiple times on same form. Removed event listeners before adding them and check if select is already wrapped

--- a/css/ojjeform.css
+++ b/css/ojjeform.css
@@ -19,6 +19,7 @@
     display: block;
     height: 19px;
     line-height: 19px;
+    outline: none;
 }
 
 .form-type-select .ojjeform-select-chosen{
